--- a/ionic.config.json
+++ b/ionic.config.json
@@ -4,5 +4,9 @@
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
-  }
+  },
+  "proxies": [{
+    "path": "/",
+    "proxyUrl": "http://localhost:8080/"
+}]
 }
