--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/http": "5.2.9",
     "@angular/platform-browser": "5.2.9",
     "@angular/platform-browser-dynamic": "5.2.9",
-    "@ionic-native/core": "4.6.0",
+    "@ionic-native/core": "^4.6.0",
+    "@ionic-native/fcm": "^4.9.2",
     "@ionic-native/splash-screen": "4.6.0",
     "@ionic-native/status-bar": "4.6.0",
     "@ionic/storage": "2.1.3",
@@ -33,6 +34,7 @@
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-customurlscheme": "^4.3.0",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-fcm": "^2.1.2",
     "cordova-plugin-inappbrowser": "^3.0.0",
     "cordova-plugin-ionic-keyboard": "^2.1.2",
     "cordova-plugin-ionic-webview": "^1.2.1",
@@ -67,7 +69,8 @@
       "cordova-plugin-customurlscheme": {
         "URL_SCHEME": "io.tortas.ksquare"
       },
-      "cordova-universal-links-plugin": {}
+      "cordova-universal-links-plugin": {},
+      "cordova-plugin-fcm": {}
     },
     "platforms": [
       "android"
